Signed-off-by: chen <337899329@qq.com>

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -3,8 +3,9 @@
 <div role="main" data-yolo="1">
   {% block document %}
     <div class="admonition note">
-      <p class="admonition-title">Deprecation Note</p>
+      <p class="admonition-title">请注意</p>
       <p>
+
         We published the last version of Graylog Documentation before the release of Graylog 4.2.
         Now, all documentation and help content for Graylog products are available at
         <a target="_blank" href="https://docs.graylog.org/">https://docs.graylog.org/</a>.
